pushing cleared FF_common on server

--- a/BrainNet/notebooks/RNN_mnist_transfer_relu10.ipynb
+++ b/BrainNet/notebooks/RNN_mnist_transfer_relu10.ipynb
@@ -775,7 +775,405 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▌         | 3273/60000 [00:28<04:05, 230.70it/s]"
+      "100%|██████████| 60000/60000 [08:32<00:00, 117.07it/s]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 1.5197\n",
+      "Last train accuracy: 0.8671\n",
+      "Last test accuracy: 0.8674\n",
+      "\n",
+      "\n",
+      "Run 4 / 5...\n",
+      "Count of 0: 4428  Count of 1: 1572\n",
+      "Meta-learning on relu...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [00:45<00:00,  1.10it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.5045\n",
+      "Last train accuracy: 0.7440\n",
+      "Last test accuracy: 0.7360\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0987\n",
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [11:38<00:00, 85.91it/s] \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.3812\n",
+      "Last train accuracy: 0.0987\n",
+      "Last test accuracy: 0.0980\n",
+      "\n",
+      "\n",
+      "Run 5 / 5...\n",
+      "Count of 0: 2864  Count of 1: 3136\n",
+      "Meta-learning on relu...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [00:47<00:00,  1.05it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.6930\n",
+      "Last train accuracy: 0.7433\n",
+      "Last test accuracy: 0.7551\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0903\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0892\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [08:49<00:00, 113.27it/s]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 1.5147\n",
+      "Last train accuracy: 0.8566\n",
+      "Last test accuracy: 0.8584\n",
+      "\n",
+      "=====> v1000_t3\n",
+      "\n",
+      "Run 1 / 5...\n",
+      "Count of 0: 5022  Count of 1: 978\n",
+      "Meta-learning on relu...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:32<00:00,  1.86s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.4269\n",
+      "Last train accuracy: 0.8387\n",
+      "Last test accuracy: 0.8364\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0987\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [34:15<00:00, 29.19it/s]  \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.3545\n",
+      "Last train accuracy: 0.0987\n",
+      "Last test accuracy: 0.0980\n",
+      "\n",
+      "\n",
+      "Run 2 / 5...\n",
+      "Count of 0: 3158  Count of 1: 2842\n",
+      "Meta-learning on relu...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:54<00:00,  2.29s/it]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.5945\n",
+      "Last train accuracy: 0.5147\n",
+      "Last test accuracy: 0.5302\n",
+      "Final upstream test acc 0.5302 not high enough, retrying...\n",
+      "Count of 0: 3025  Count of 1: 2975\n",
+      "Meta-learning on relu...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:50<00:00,  2.20s/it]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.5628\n",
+      "Last train accuracy: 0.5167\n",
+      "Last test accuracy: 0.5000\n",
+      "Final upstream test acc 0.5000 not high enough, retrying...\n",
+      "Count of 0: 4032  Count of 1: 1968\n",
+      "Meta-learning on relu...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:42<00:00,  2.05s/it]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.4846\n",
+      "Last train accuracy: 0.6793\n",
+      "Last test accuracy: 0.6696\n",
+      "Final upstream test acc 0.6696 not high enough, retrying...\n",
+      "Count of 0: 2062  Count of 1: 3938\n",
+      "Meta-learning on relu...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:43<00:00,  2.06s/it]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.6931\n",
+      "Last train accuracy: 0.6507\n",
+      "Last test accuracy: 0.6453\n",
+      "Final upstream test acc 0.6453 not high enough, retrying...\n",
+      "Count of 0: 426  Count of 1: 5574\n",
+      "Meta-learning on relu...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:34<00:00,  1.89s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.6931\n",
+      "Last train accuracy: 0.8347\n",
+      "Last test accuracy: 0.8456\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0903\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0892\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [32:44<00:00, 30.54it/s]  \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 1.5480\n",
+      "Last train accuracy: 0.4881\n",
+      "Last test accuracy: 0.4850\n",
+      "\n",
+      "\n",
+      "Run 3 / 5...\n",
+      "Count of 0: 3497  Count of 1: 2503\n",
+      "Meta-learning on relu...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:50<00:00,  2.20s/it]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.6931\n",
+      "Last train accuracy: 0.6060\n",
+      "Last test accuracy: 0.5989\n",
+      "Final upstream test acc 0.5989 not high enough, retrying...\n",
+      "Count of 0: 3188  Count of 1: 2812\n",
+      "Meta-learning on relu...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:48<00:00,  2.17s/it]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.6931\n",
+      "Last train accuracy: 0.5673\n",
+      "Last test accuracy: 0.5533\n",
+      "Final upstream test acc 0.5533 not high enough, retrying...\n",
+      "Count of 0: 3833  Count of 1: 2167\n",
+      "Meta-learning on relu...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:40<00:00,  2.01s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.5521\n",
+      "Last train accuracy: 0.8080\n",
+      "Last test accuracy: 0.8020\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0879\n",
+      "INITIAL test accuracy: 0.0875\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 45%|████▌     | 27295/60000 [15:08<07:18, 74.56it/s]  "
      ]
     }
    ],
